--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,24 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+buildscript {
+    ext {
+        version_moshi = "1.9.3"
+        version_glide = "4.8.0"
+        version_retrofit="2.9.0"
+        version_navigation = "2.4.2"
+        version_lifecycle= "2.4.1"
+    }
+
+    dependencies {
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$version_navigation"
+    }
+}
+
 plugins {
     id 'com.android.application' version '7.1.2' apply false
     id 'com.android.library' version '7.1.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.5.30' apply false
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin' version '2.0.0' apply false
 }
 
 task clean(type: Delete) {
