--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,19 @@ buildscript {
         version_glide = "4.8.0"
         version_retrofit="2.9.0"
         version_navigation = "2.4.2"
+        //version_navigation = "2.3.5"
         version_lifecycle= "2.4.1"
+        junitVersion="4.13.2"
+        androidXTestExtKotlinRunnerVersion ="1.1.3"
+        androidXTestCoreVersion="1.4.0"
+        robolectricVersion="4.5.1"
+        archTestingVersion = "2.1.0"
+        coroutinesVersion = '1.5.0'
+        fragmentVersion = '1.4.0'
+        espressoVersion="3.4.0"
+        kotlinVersion = '1.5.31'
+        mockitoVersion = '2.8.9'
+        dexMakerVersion = '2.28.1'
     }
 
     dependencies {
